--- a/index.html
+++ b/index.html
@@ -4,22 +4,71 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Document</title>
   </head>
   <body class="page">
-    <style>
+    <!-- <style>
       body {
         background-color: teal;
         color: aliceblue;
       }
       span {
-        color: red;
+        color: rgb(48, 49, 48);
         text-transform: uppercase;
         font-style: italic;
       }
-    </style>
-    <h1>Добрий день, <span>Everybody</span>!</h1>
+    </style> -->
+    <!-- <h1>Добрий день, <span>Everybody</span>!</h1>
+    <ul class="menu">
+      <li class="menu_item">What can I say?</li>
+      <li class="menu_item">What can I say?</li>
+      <li class="menu_item">What can I say?</li>
+      <li class="menu_item">What can I say?</li>
+      <li class="menu_item">What can I say?</li>
+    </ul> -->
+    <!-- <img
+      src="./images/Screenshot_20221028-155643_Facebook.jpg"
+      alt="ninka"
+      width="300px"
+    /> -->
+    <!-- <div class="actions js-actions">
+      <input type="text" class="js-input" />
+
+      <button type="button" data-actions="open">open</button>
+      <button type="button" data-actions="close">close</button>
+      <button type="button" data-actions="change">change</button>
+    </div>
+    <div class=" js-color_piker"></div>
+
+<button id="single" class="btn">SINGLE CALLBACK</button>
+<hr>
+<button id="multiple" class="btn">MULTIPLE CALLBACKS</button>
+
+<button class="btn" data-action="add">Add Listener</button>
+<button class="btn" data-action="remove">Remove Listener</button>
+<hr>
+<button id="btn" class="btn">Click me</button>
+
+<button type="button" class="btn">
+  Click me
+</button>
+<li><img src="" alt=""></li> -->
+<!-- 
+<form action="submit" class="js-search">
+<input type="text" name="queryValue" >
+<select name="selectValue" >
+  <option value="car">Марка</option>
+  <option value="type">Модель</option>
+</select>
+<button type="submit">пошук</button>
+</form>
+<ul class="list"></ul> -->
+
+<input type="text" class="js-input" placeholder="write somethin...">
 
     <script src="./js/script.js"></script>
   </body>
-</html>
+</html
+
+ 
